Use java.util.Optional in model interfaces. Use UncheckedIOException where appropriate.